# kicoma

./: .coveragerc  .editorconfig  .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  README.md  README.rst  docker-compose.yml  entrypoint.sh  fetch_remote_sqlite.sh  kicoma.sqlite3  manage.py  pyproject.toml  reset-db-heroku.sh  reset-db.sh  run_server.sh  setup.cfg  shiftleft.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.envs/.local/: .postgres
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  main.yml  shiftleft.yml
.kamal/: secrets
config/: deploy.yml  django_admin_url.key  django_secret.key  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  erd.plantuml  index.rst
kicoma/: conftest.py  middleware.py
kicoma/common/: urls.py  views.py
kicoma/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_auto_20200807_2114.py
kicoma/kitchen/: admin.py  apps.py  changelog-cs.yaml  changelog-en.yaml  daily_job.py  forms.py  functions.py  managers.py  models.py  signals.py  tables.py  tests.py  urls.py  utils.py  views.py
kicoma/kitchen/fixtures/: alergeny.json  article.csv  article.json  daily_menu.json  dph.json  druhy-jidla.json  ingredience-in.csv  ingredient.csv  ingredient.json  jednotky.json  recepty-in.csv  recipe.csv  recipe.json  recipe_article.json  sklad-in.csv  skupiny-stravniku.json  skupiny.json  transform.py  uzivatele-dobrovec.json  uzivatele-tri.json  uzivatele.json
kicoma/kitchen/fixtures/in/: Article.json  DailyMenu.json  Recipe.json  RecipeArticle.json
kicoma/kitchen/fixtures/stravnicek/: recepty-in.csv  recipe.json  recipe_article-in.csv  recipe_article.json  transform-stravnicek.py
kicoma/kitchen/migrations/: 0001_initial.py  0002_auto_20200425_1551.py  0002_auto_20200707_2230.py  0002_auto_20200824_1034.py  0002_historicalarticle.py  0002_stockreceipt_date_created.py  0003_auto_20200824_1036.py  0004_auto_20200827_0853.py  0005_auto_20200828_1324.py  0006_auto_20200906_1254.py  0007_auto_20201119_1745.py  0008_auto_20211118_2304.py  0009_auto_20220215_1719.py  0010_menu_menurecipe.py  0011_alter_menu_menu.py  0012_dailymenu_menu.py  0013_auto_20220227_1753.py  0014_alter_historicalarticle_options_and_more.py  0015_alter_stockreceiptarticle_vat.py  0016_alter_stockissuearticle_options.py  0017_alter_article_comment_alter_dailymenu_comment_and_more.py  0018_alter_dailymenu_date.py  0019_alter_article_on_stock_alter_article_total_price_and_more.py  0020_appsettings_alter_menu_menu_alter_recipe_recipe.py  0021_alter_appsettings_options.py  0022_remove_appsettings_demo_usage.py  0023_alter_dailymenurecipe_amount_alter_menurecipe_amount_and_more.py  0024_alter_menurecipe_options_alter_recipearticle_options_and_more.py
kicoma/kitchen/templates/kitchen/: about.html  about_author.html  about_content.html  about_short_intro.html  changelog.html  data_cleanup.html  docs.html  help.html  home.html  i18n.html  import.html  pdf_page.html  policy.html  privacy_policy_cs.txt  privacy_policy_en.txt
kicoma/kitchen/templates/kitchen/article/: create.html  delete.html  edit.html  import.html  list.html  listhistory.html  listlack.html  pdf.html  restricted_list.html  restricted_update.html  stock_pdf.html  update.html
kicoma/kitchen/templates/kitchen/dailymenu/: create.html  createrecipe.html  delete.html  deleterecipe.html  list.html  listrecipe.html  pdf.html  print.html  update.html  updaterecipe.html
kicoma/kitchen/templates/kitchen/ingredient/: create.html
kicoma/kitchen/templates/kitchen/menu/: create.html  createrecipe.html  delete.html  deleterecipe.html  list.html  listrecipe.html  update.html  updaterecipe.html
kicoma/kitchen/templates/kitchen/partials/: _filter_section.html
kicoma/kitchen/templates/kitchen/recipe/: create.html  createarticle.html  createingredient.html  delete.html  deletearticle.html  deleteingredient.html  list.html  listarticles.html  listingredients.html  pdf.html  pdf_list.html  update.html  updatearticle.html  updateingredient.html
kicoma/kitchen/templates/kitchen/recipebook/: detail.html  show.html
kicoma/kitchen/templates/kitchen/report/: articles_not_in_recipe.html  catering_unit_filter.html  catering_unit_show.html  food_consumption.html  food_consumption_pdf.html  incorrect-units.html  monthly_costs_per_meal_group_pdf.html  show_stock_issues_receipts_total_price.html
kicoma/kitchen/templates/kitchen/stockissue/: approve.html  create.html  create_from_daily_menu.html  createarticle.html  createitem.html  delete.html  deletearticle.html  deleteitem.html  (+7 more)
kicoma/kitchen/templatetags/: auth_extras.py  filter_extras.py
kicoma/static/css/: project.css
kicoma/static/js/: project.js
kicoma/static/sass/: custom_bootstrap_vars.scss  project.scss
kicoma/templates/: base.html  menu_about.html  menu_dailymenu.html  menu_inventory.html  menu_recipes.html  menu_reports.html  menu_store.html  menu_switch_lang.html  notImplemented.html
kicoma/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
kicoma/templates/common/: base.html  home.html
kicoma/templates/pages/: about.html  home.html
kicoma/templates/pages/recipebook/: show.html
kicoma/users/: admin.py  apps.py  forms.py  urls.py
kicoma/users/migrations/: 0001_initial.py  0002_alter_user_id.py
kicoma/users/tests/: factories.py  test_forms.py  test_models.py  test_urls.py  test_views.py
kicoma/utils/: context_processors.py
locale/cs/LC_MESSAGES/: django.mo  django.po
locale/cs_CZ/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
requirements/: base.txt  local.txt  production.txt
utility/: requirements-bionic.apt  requirements-buster.apt  requirements-jessie.apt  requirements-trusty.apt  requirements-xenial.apt
(+17 files in other folders)
