[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KiCoMa"
version = "1.0.0"
description = "Kitchen Cooking Management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core utilities
    "pytz==2025.2",  # https://github.com/stub42/pytz
    "python-slugify==8.0.4",  # https://github.com/un33k/python-slugify
    "Pillow==11.1.0",  # https://github.com/python-pillow/Pillow
    "argon2-cffi==23.1.0",  # https://github.com/hynek/argon2_cffi
    "whitenoise==6.9.0",  # https://github.com/evansd/whitenoise
    "python-dateutil==2.9.0.post0",  # https://github.com/dateutil/dateutil
    
    # Project specific
    "django-filter==24.2",
    "django-import-export==4.0.7",
    "django-tables2==2.7.0",
    "django-bootstrap4==24.3",
    "sentry-sdk==2.25.1",
    "django-simple-history==3.7.0",
    "tablib~=3.5.0",
    "openpyxl==3.1.2",
    
    # Django
    "django==5.2",  # https://www.djangoproject.com/
    "django-environ==0.12.0",  # https://github.com/joke2k/django-environ
    "django-model-utils==5.0.0",  # https://github.com/jazzband/django-model-utils
    "django-allauth==65.7.0",  # https://github.com/pennersr/django-allauth
    "django-crispy-forms==2.3",  # https://github.com/django-crispy-forms/django-crispy-forms
    "crispy-bootstrap4==2024.10",  # https://github.com/django-crispy-forms/crispy-bootstrap4
]

[project.optional-dependencies]
dev = [
    # Development tools
    "Werkzeug==3.1.3",  # https://github.com/pallets/werkzeug
    "ipdb==0.13.13",  # https://github.com/gotcha/ipdb
    "Sphinx==8.2.3",  # https://github.com/sphinx-doc/sphinx
    "psycopg2-binary==2.9.10",  # https://github.com/psycopg/psycopg2
    
    # Testing
    "mypy==1.15.0",  # https://github.com/python/mypy
    "django-stubs==5.1.3",  # https://github.com/typeddjango/django-stubs
    "pytest==8.3.5",  # https://github.com/pytest-dev/
    "pytest-sugar==1.0.0",  # https://github.com/Frozenball/pytest-sugar
    "pytest-django==4.11.1",  # https://github.com/pytest-dev/pytest-django
    
    # Code quality
    "flake8==7.2.0",  # https://github.com/PyCQA/flake8
    "flake8-isort==6.1.2",  # https://github.com/gforcada/flake8-isort
    "coverage==7.8.0",  # https://github.com/nedbat/coveragepy
    "black==25.1.0",  # https://github.com/ambv/black
    "pylint-django==2.6.1",  # https://github.com/PyCQA/pylint-django
    "pre-commit==4.2.0",  # https://github.com/pre-commit/pre-commit
    
    # Django development
    "factory-boy==3.3.3",  # https://github.com/FactoryBoy/factory_boy
    "django-debug-toolbar==5.1.0",  # https://github.com/jazzband/django-debug-toolbar
    "django-extensions==3.2.3",  # https://github.com/django-extensions/django-extensions
    "django-coverage-plugin==3.1.0",  # https://github.com/nedbat/django_coverage_plugin
]

prod = [
    # Production dependencies
    "gunicorn==23.0.0",  # https://github.com/benoitc/gunicorn
    "django-anymail[mailgun]==13.0",  # https://github.com/anymail/django-anymail
]

# Commented out redis dependencies - uncomment if needed
# redis = [
#     "redis==5.2.1",  # https://github.com/andymccurdy/redis-py
#     "django-redis==5.4.0",  # https://github.com/niwinz/django-redis
# ]
